app/src/main/java/com/example/core/error/UiState.kt
package com.example.core.error

sealed interface UiState<out T> {
    object Idle : UiState<Nothing>
    object Loading : UiState<Nothing>
    data class Success<out T>(val data: T) : UiState<T>
    data class Error(val error: ErrorModel) : UiState<Nothing>
}
